<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_margin="35dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/true_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/true_button"
            android:layout_marginEnd="5dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="375dp" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/false_button"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="375dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/prev_button"
            android:layout_marginEnd="5dp"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="375dp" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/next_button"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="375dp" />

    </LinearLayout>

</LinearLayout>